# aytiMagicMirror

./: CMakeLists.txt  api.txt  magicMirror_src.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
AI/: wav2str.cpp  wav2str.h
api/: ApiManager.cpp  ApiManager.h
audio/: audioInput.h  main.cpp  main.out
cam/: smile.cpp  smile.h
sql/: sqlConnect.cpp  sqlConnect.h
